<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dam.isi.frsf.utn.edu.ar.laboratorio03.CrearOfertaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_oferta"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:labelFor="@+id/etOferta"/>

        <EditText
            android:id="@id/etOferta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/tvOferta"
            android:inputType="textCapSentences"/>

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/sCategoria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvFechaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_fin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <DatePicker
            android:id="@+id/dpFechaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <TextView
            android:id="@+id/tvHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horas"
            android:labelFor="@+id/etHoras"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/etHoras"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@id/tvHoras"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvMonedaPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moneda_de_pago"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbDolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dolar"
                android:drawableRight="@mipmap/ic_bandera_us"/>

            <RadioButton
                android:id="@+id/rbEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:drawableEnd="@mipmap/ic_bandera_eu"/>

            <RadioButton
                android:id="@+id/rbPesoArg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_argentino"
                android:drawableEnd="@mipmap/ic_bandera_ar"/>

            <RadioButton
                android:id="@+id/rbLibra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/libra_esterlina"
                android:drawableRight="@mipmap/ic_bandera_uk"/>

            <RadioButton
                android:id="@+id/rbReal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real"
                android:drawableRight="@mipmap/ic_bandera_br"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tvMaxPorHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_pesos_hora"
            android:labelFor="@+id/etMaxPorHora"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/etMaxPorHora"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@id/tvMaxPorHora"
            android:inputType="numberDecimal" />

        <CheckBox
            android:id="@+id/chkEnIngles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_ingles" />

        <Button
            android:id="@+id/bGuardar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />
    </LinearLayout>
</ScrollView>
